--- a/index.html
+++ b/index.html
@@ -164,6 +164,22 @@
       </div>
     </section>
 
+    <section id="videos">
+        <h2>Видео</h2>
+        <h3>Блокада Ленинграда</h3>
+        <div class="video-container">
+            <div class="video-wrapper">
+                <iframe src="https://vk.com/video_ext.php?oid=-113551114&id=456239417&hash=38a09fc0f4299428" width="640" height="360" frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+        </div>
+        <h3>Дети Войны</h3>
+        <div class="video-container">
+            <div class="video-wrapper">
+                <iframe src="https://vk.com/video_ext.php?oid=-113551114&id=456239421&hash=86f34847132f8028" width="640" height="360" frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            </div>
+        </div>
+    </section>
+    
     <section id="resources">
       <h2>Источники</h2>
       <ul>
