--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <li><a href="#home">Главное</a></li>
         <li><a href="#timeline">События</a></li>
         <li><a href="#gallery">Галерея</a></li>
+        <li><a href="#videos">Видео-ролики</a></li>
         <li><a href="#resources">Источники</a></li>
       </ul>
     </nav>
@@ -165,7 +166,7 @@
     </section>
 
     <section id="videos">
-        <h2>Видео</h2>
+        <h2>Видео-ролики</h2>
         <h3>Блокада Ленинграда</h3>
         <div class="video-container">
             <div class="video-wrapper">
